[package]
name = "dcd_mock"
version = "0.1.0"
authors = ["Konrad Siek <konrad.siek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dcd = { path = "../dejacode-downloader/" }                  # https://github.com/PRL-PRG/dejacode-downloader
csv = "1.1"
